0.3.4:
- Long-press on Back key exit the application.
- Added "Clear cache on exit" in privacy settings.
- Context menu for images and mailto links added.
- Text can be selected and copied to clipboard.

0.3.3:
- Search can be done from the url bar. The search url is customizable.
- The start page can be customized.
- The start page can show a search box.
- The browser user agent can be customized.
- The ad blocker white list is now stored in database.
- Url bar now display favicons.
- Bookmarks can be exported to Android browser bookmarks.
- Improved suggestions in url bar, now search in history and bookmarks; better design.

0.3.2:
- Added start page, showing most used bookmarks and recent history.
- Bookmarks can be sorted by hit count.
- Change icon set to match Android guidelines.
- Added icons for mdpi/hdpi devices.
- Added changelog dialog.

0.3.1:
- Zoom by double-tap.
- Combined bookmarks/history window.
- Updated design.
- Move about dialog to preferences.
- Fix bug: sometimes a page load but do not show.

0.3.0:
- New design.
- Bugfix: FC at start-up for locale other than english/french.

0.2.9:
- Pinch zoom;
- "Bubble" position can be set to right, left or both.
- Bookmark import/export from/to SD card.
- Javascript prompt support;

0.2.8:
- VND url handler;
- Long back press quit application;
- Added french translation;

0.2.7: First public release.